# mlisp

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  lambda.lisp  main.cpp  mlisp-test.sh  mlisp.cpp  mlisp.hpp  mll.cpp  mll.hpp  subst.lisp  test.lisp  test.sh
examples/: backwards.lisp  closure.lisp  equal.lisp  frac.lisp  frac.scm  mlisp-test.sh  primitives.lisp
lib/mll/: CMakeLists.txt
lib/mll/src/mll/: custom.cpp  custom.hpp  env.cpp  env.hpp  eval.cpp  eval.hpp  gc.cpp  gc.hpp  list.cpp  list.hpp  node.cpp  node.hpp  parser.cpp  parser.hpp  print.cpp  print.hpp  proc.cpp  proc.hpp  quote.cpp  quote.hpp  symbol.cpp  symbol.hpp
lib/mll/test/: list_test.cpp  node_test.cpp  proc_test.cpp  symbol_test.cpp
src/: eval.cpp  eval.hpp  fixnum.cpp  fixnum.hpp  load.cpp  load.hpp  main.cpp  number.cpp  number.hpp  operators.cpp  operators.hpp  parser.cpp  parser.hpp  print.hpp  repl.cpp  repl.hpp  string.cpp  string.hpp
src/mlisp/: CMakeLists.txt  argc.cpp  argc.hpp  bool.hpp  eval.cpp  eval.hpp  load.cpp  load.hpp  main.cpp  mlisp.cpp  number.cpp  number.hpp  operators.cpp  operators.hpp  parser.cpp  primitives.cpp  primitives.hpp  print.cpp  print.hpp  repl.cpp  repl.hpp  string.cpp  string.hpp
src/mll/: CMakeLists.txt  custom.cpp  custom.hpp  env.cpp  env.hpp  eval.cpp  eval.hpp  mll.cpp  mll.hpp  node.cpp  node.hpp  parser.cpp  parser.hpp  print.cpp  print.hpp  printer.cpp  printer.hpp  quote.cpp  quote.hpp  symdef.hpp
src/mll/src/mll/: print.cpp
src/test/: parser_test.cpp
test/: apply.lisp  apply2.lisp  assoc.lisp  backwards.lisp  begin.lisp  closure.lisp  equal.lisp  eval.lisp  if-test.lisp  mlisp-test.sh  op.lisp  primitives.lisp  reverse.lisp
tools/: apply-format-all.sh  apply-format.sh  build.sh  clang-format-all.sh  clang-format.sh  configure.sh
